@@ -227,9 +227,6 @@ SCM ly_split_list (SCM s, SCM list);
 SCM ly_unique (SCM list);
 
 
-SCM ly_make_anonymous_module ();
-void ly_copy_module_variable (SCM dest, SCM src);
-SCM ly_module_to_alist (SCM mod);
 
 /*
   snarfing.
