@@ -88,7 +88,11 @@ Staff_performer::create_audio_elements ()
 void
 Staff_performer::stop_translation_timestep ()
 {
-  SCM proc = scm_primitive_eval (ly_symbol2scm ("percussion-p")); 
+  /*
+    UGH. -> don't use eval.
+  */
+  
+  SCM proc = scm_primitive_eval (ly_symbol2scm ("percussion?")); 
   SCM drums = gh_call1 (proc, ly_symbol2scm (instrument_string_.to_str0 ()));
   audio_staff_->channel_ = (drums == SCM_BOOL_T ? 9 : -1 );
   if (name_)
