@@ -1,5 +1,7 @@
 % Toplevel initialisation file. 
-#(use-modules (lily))
+
+#(define-public point-and-click #f)
+#(define-public midi-debug #f)
 
 \version "1.5.68"
 
