@@ -1,3 +1,7 @@
+2002-09-20  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
+
+	* lily/ly-module.cc: new file.
+
 2002-09-17  Rune Zedeler  <rune@zedeler.dk>
 
 	* lily/accidental-engraver.cc: Also work with partial measures.
